--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-expression",
+  "name": "custom-exp",
   "version": "1.0.4",
   "description": "evaluates expressions",
   "main": "dist/index",
