--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^13.7.0",
     "jasmine": "^3.5.0",
     "nyc": "^15.0.0",
+    "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
   "publishConfig": {
