--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "types": "dist/index",
   "scripts": {
     "build": "tsc -p .",
-    "test": "ts-node node_modules/jasmine/bin/jasmine --config=jasmine.json",
-    "test:coverage": "ts-node node_modules/nyc/bin/nyc.js npm rum test"
+    "test": "ts-node -P ./tsconfig.test.json node_modules/jasmine/bin/jasmine --config=jasmine.json",
+    "test:coverage": "ts-node -P ./tsconfig.test.json node_modules/nyc/bin/nyc.js npm rum test"
   },
   "author": "rudxde",
   "repository": "https://github.com/rudxde/custom-exp",
