--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "tsc -p .",
     "test": "ts-node -P ./tsconfig.test.json node_modules/jasmine/bin/jasmine --config=jasmine.json",
-    "test:coverage": "ts-node -P ./tsconfig.test.json node_modules/nyc/bin/nyc.js npm rum test"
+    "test:coverage": "ts-node -P ./tsconfig.test.json node_modules/nyc/bin/nyc.js npm rum test",
+    "lint": "eslint -c .eslintrc.js --ext .ts ."
   },
   "author": "rudxde",
   "repository": "https://github.com/rudxde/custom-exp",
@@ -16,6 +17,10 @@
   "devDependencies": {
     "@types/jasmine": "^3.5.3",
     "@types/node": "^13.7.0",
+    "@typescript-eslint/eslint-plugin": "^2.19.2",
+    "@typescript-eslint/eslint-plugin-tslint": "^2.19.2",
+    "@typescript-eslint/parser": "^2.19.2",
+    "eslint": "^6.8.0",
     "jasmine": "^3.5.0",
     "nyc": "^15.0.0",
     "ts-node": "^8.6.2",
